--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Abhaya+Libre" rel="stylesheet">
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
-	<link rel="stylesheet" href="css/main.css">
-	<script src="js/main.js"></script>
+	<link rel="stylesheet" href="css/min.css">
+	<script src="js/min.js"></script>
 </head>
 
 <body>
