--- a/src/index.html
+++ b/src/index.html
@@ -12,69 +12,15 @@
 	<link href="https://fonts.googleapis.com/css?family=Abhaya+Libre" rel="stylesheet">
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
-	<link rel="stylesheet" href="css/min.css">
+	<!-- <link rel="stylesheet" href="css/min.css"> -->
+	<link rel="stylesheet" href="css/main.css">
 	<script src="js/min.js"></script>
 </head>
 
 <body>
 
-<header>
-	<div>
-		<div class="call">
-			<p>Call Now</p>
-			<a href="tel:2674365109">267-436-5109</a>
-		</div>
-
-		<div class="logo">
-			<h1>Anonymous Consultants</h1>
-			<img src="img/logo_header.png" alt="logo" class="logo">
-			<p class="name">anonymous consultants</p>
-		</div>
-
-		<div class="social_profiles">
-			<a href="#" target="_blank">
-				<img src="img/instagram.png" alt="instagram">
-			</a>
-
-			<a href="#" target="_blank">
-				<img src="img/twitter.png" alt="twitter">
-			</a>
-
-			<a href="#" target="_blank">
-				<img src="img/pinterest.png" alt="pinterest">
-			</a>
-		</div>
-
-		<p class="">Your Success Begins with Us</p>
-	</div>
-
-	<form action="">
-		<h2>Ready to start your growth journey?</h2>
-		<input type="text">
-		<input type="email">
-		<input type="submit">
-	</form>
-</header>
-
-<main>
-	<article>
-		<section>
-
-		</section>
-
-		<section>
-
-		</section>
-
-		<section>
-
-		</section>
-	</article>
-</main>
-
-<footer>
-	
-</footer>
+	<p>Hello World</p>
+	<p>Welcome to Hell</p>
 
 </body>
 </html>
