--- a/src/index.html
+++ b/src/index.html
@@ -11,16 +11,13 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Abhaya+Libre" rel="stylesheet">
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-
-	<!-- <link rel="stylesheet" href="css/min.css"> -->
 	<link rel="stylesheet" href="css/main.css">
-	<script src="js/min.js"></script>
 </head>
 
 <body>
-
 	<p>Hello World</p>
 	<p>Welcome to Hell</p>
 
+	<script src="js/main.js"></script>
 </body>
 </html>
